--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,6 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -68,5 +67,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
